
=== ppracer 0.5 beta ===

2006-05-03  Volker Stroebel <volker@planetpenguin.de>
	* (*)
	added support for OpenAL

2006-04-26  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	Use keyPressEvent in the UI to partially fix several 
	keyboard problems

2006-04-19  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/base/defs.h src/*
	added ppogl::Axis enum
	changed code to use ppogl::Axis instead of chars

2006-04-11  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/Textures.* src/data/*
	added Texture modes
	changed format for Texture.load()
	changed squirrel files to new format
	
	* src/ppogl/font/FTFont.cpp
	Applied patch to limit number of glyphs per texture from Keith Packard	

2006-04-07  Volker Stroebel <volker@planetpenguin.de>
	* src/squirrel/* src/sqstdlib/*
	updated squirrel to 2.1
	
	* src/squirrel/squirrel.h
	use inttypes.h if available
	
	* src/ppogl/poogl_script.* src/stuff.h data/config.nut.in
	added workaround for writing config files

2006-02-15  Volker Stroebel <volker@planetpenguin.de>
	* src/main.cc
	added --reset-config command line option

2006-02-01  Volker Stroebel <volker@planetpenguin.de>
	* src/game_type_select.* src/event_select.*
	src/event_race_select.* src/race_select.*
	src/configmode.* src/configuration.*
	fixed keyboard navigation
	
	*src/partsys.* src/quadtree.cpp
	compilation fixes

2006-01-31  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/font/*
	replaced FTVector with std::vector

2006-01-29  Volker Stroebel <volker@planetpenguin.de>
	* src/render_utils.cpp
	fix draw billboard
	
	* src/part_sys.*
	added class PartSys
	changed code to use new class

2006-01-25  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	cleanups

2006-01-14  Volker Stroebel <volker@planetpenguin.de>
	* src/sqstdlib/Makefile.am src/ppogl/Makefile.am
	changes to allow building the project from other directories

	* configure.in data/config.nut.in
	fixed creation of config.nut
	
	* (*)
	updated copyright
